# fisheye_motion

./: .gitignore  PRJ4_report_fisheye_motion_ai.md  README.md  environment.yml  prj4_abstraction_of_moving_area_and_target_tracking_in_fisheye_video.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: academic_report.html  academic_report.md
docs/paper/: README.md  main.tex  references.bib  texlive.profile
scripts/: download_weights.sh  make_academic_report_assets.py  prepare_data.sh  run_full_pipeline.sh  run_smoke_test.sh  setup_env.sh
src/fisheye_ai/: __init__.py  baselines.py  build_feature_cache.py  compare_routes.py  config.py  dataset.py  deep_modules.py  download_weights.py  geometry.py  losses.py  metrics.py  model.py  report_assets.py  run_experiments.py  tracking.py  train.py  utils.py  validate_data.py  visualize.py
