[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fisheye-ai-motion"
version = "0.1.0"
description = "GPU deep fisheye motion segmentation with RAFT, YOLO, FisheyeMotionNet, and SAM2."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
